btsync-gui (0.8.3-1) unstable; urgency=low

  * Made columns in "Folders" and "Devices" pane persistently sortable
  * Hide unimplemented panes "Transfers" and "History"

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 06 Apr 2014 18:28:06 +0200

btsync-gui (0.8.2-1) unstable; urgency=low

  * Added Bulgarian translation by Atanas Kovachki (Closes #121)
  * Added Polish translation by Damian Szymański (Closes #123)

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 06 Apr 2014 18:28:06 +0200

btsync-gui (0.8.1-1) unstable; urgency=low

  * Added transfer status indicator to all tabs of the main
    window except for the preferences pane (1.3 UI)
  * Added detailed API timing info to logging
  * Added default support for new advanced preferences of
    version 1.3 (Closes #119)
  * Added Czech translation by Marek Lucas (Closes #111)
  * Added Russian translation by Sergey Shlyapugin (Closes #112)

 -- Leo Moll <leo.moll@yeasoft.com>  Mon, 01 Apr 2014 19:31:29 +0200

btsync-gui (0.8.0-1) unstable; urgency=low

  * Remember column sizes (Closes #101)
  * Added I18N support (Closes #102)
  * Added German translation by Leo (Closes #103)
  * Added Italian translation by Leo & Andrea (Closes #104)
  * Added French translation by Loïc Fournet (Closes #105)
  * Added Spanish translation by Jose Luis Tirado (Closes #106)
  * Added Dutch translation by Jasper Sierink (Closes #108)
  * Added Galician translation by Miguel Anxo Bouzada (Closes #109)

 -- Leo Moll <leo.moll@yeasoft.com>  Wed, 19 Mar 2014 14:09:36 +0100

btsync-gui (0.7.3-1) unstable; urgency=low

  * Added function for editing the .SyncIgnore file (Closes #98)
  * "Open Manual" renamed to the more correct "Open Original Manual"
  * Fixed occasional malfunction in "Open Web UI" (Closes #100)
  * Added menu item in folders context menu for editing the
    .SyncIgnore file (Closes #98)

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 15 Mar 2014 18:04:23 +0100

btsync-gui (0.7.2-1) unstable; urgency=low
