@@ -2,6 +2,8 @@ btsync-gui (0.8.3-1) unstable; urgency=low
 
   * Made columns in "Folders" and "Devices" pane persistently sortable
   * Hide unimplemented panes "Transfers" and "History"
+  * Implemented support for restore modified files in read-only folder
+    settings (Closes #127)
 
  -- Leo Moll <leo.moll@yeasoft.com>  Sun, 06 Apr 2014 18:28:06 +0200
 
